Front fini et traduction faite, marche sur mon tel, il reste les projets a traduire

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -21,10 +21,9 @@
 
 <section class="section" id="sectionAccueil">
 
-	<p>Mujkic Alvin<br>-<br><span id="beginner">web developper (beginner)</span></p><br><br>
+	<p>Mujkic Alvin<br>-<br><span id="beginner">web developper junior</span></p><br><br>
+	<img id="imageAccueil" src="images/accueil3.png" width="100%"><br><br><br><br>
 	<a id="voirProjets" (click)="scrollElement()" href="#">View my work</a>
-
-	<img id="imageAccueil" src="images/accueil3.png" width="100%">
 </section>
 
 <!------------------------------------------------SECTION PROJETS-------------------------------------->
@@ -59,7 +58,7 @@
 	</article>
 
 	<article id="articleCompetences">
-		<img src="images/profil_03.png">
+		<img src="images/profil_03.png" width="120">
 		<ul><h6><strong>My Skills</strong></h6>
 			<li>HTML5/CSS3</li>
 			<li>JavaScript/jQuery</li>
@@ -86,7 +85,7 @@
 	</article>
 
 	<article id="articleInfo">
-		<h5 style="text-align: center; color: #E76E33">Further informations</h5>
+		<h5 style="text-align: center; color: #E76E33; margin-top: -10px;">Further informations</h5>
 
 		<ul>
 			<li><span id="idNom">Surname :</span>   <span id="spanNom">Mujkic</span></li>
@@ -100,9 +99,9 @@
 </section>
 
 <footer>
-	<a href="https://github.com/Allviinn" target="_blank"><img src="images/github.png" width="40"></a>
-	<a href="https://facebook.com" target="_blank"><img src="images/facebook.png" width="40"></a>
-	<a href="https://www.linkedin.com/in/alvin-morel-581844131/" target="_blank"><img src="images/linkedin.png" width="40"></a>
+	<a href="https://github.com/Allviinn" target="_blank"><img src="images/github.png" width="35"></a>
+	<a href="https://facebook.com" target="_blank"><img src="images/facebook.png" width="35"></a>
+	<a href="https://www.linkedin.com/in/alvin-morel-581844131/" target="_blank"><img src="images/linkedin.png" width="35"></a>
 </footer>
 
 </ion-content>
